--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "route-finder--react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rob-now.github.io/route-finder--react",
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "gh-pages": "^1.2.0",
     "google-maps": "^3.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -14,6 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   }
 }
